--- a/FASE1.html
+++ b/FASE1.html
@@ -10,7 +10,7 @@
     <div id="container">
       <button
         class="botao1"
-        onclick=window.location.href='P1F1.HTML';
+        onclick=window.location.href='P1F1.html';
       ></button>
       <img src="./IMG/Fase 1.png" alt="Perguntas" class="cxMaior" />
     </div>
