--- a/FASE3.html
+++ b/FASE3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <button class="botao1" onclick="window.location.href='P1F3.HTML'"></button>
+        <button class="botao1" onclick="window.location.href='P1F3.html'"></button>
         <img src="./IMG/Fase 3.png" alt='Perguntas' class="cxMaior">
     </div>
     
