--- a/FASE2.html
+++ b/FASE2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <button class="botao1" onclick="window.location.href='P1F2.HTML'"></button>
+        <button class="botao1" onclick="window.location.href='P1F2.html'"></button>
         <img src="./IMG/Fase 2.png" alt='Perguntas' class="cxMaior">
     </div>
     
