--- a/resultadoF1.html
+++ b/resultadoF1.html
@@ -40,7 +40,7 @@
 
     function refazerQuiz() {
       localStorage.setItem('pontuacaoFase1', 0);
-      window.location.href = 'p1f1.html';
+      window.location.href = 'P1F1.html';
     }
 
     function voltarInicio() {
@@ -50,7 +50,7 @@
 
     function irParaFase2() {
       localStorage.setItem('pontuacaoFase1', 0);
-      window.location.href = 'fase2.html'; // Altere para o arquivo correto da fase 2
+      window.location.href = 'FASE2.html'; // Altere para o arquivo correto da fase 2
     }
   </script>
 </body>
